--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             <img src="./images/logo.png" alt="">
           </div>
           <div class="promo__privacy offset-md-7 col-md-3">
-            <a href="#">Privacy Policy</a>
+            <a href="#" class="link">Privacy Policy</a>
           </div>
         </div>
         <div class="row">
@@ -567,7 +567,7 @@
             &#169; 2012-2020 Preply Inc.
           </p>
           <div class="footer__privacy col-12 offset-lg-6 col-lg-2">
-            <a href="#">Privacy Policy</a>
+            <a href="#" class="link">Privacy Policy</a>
           </div>
         </div>
       </div>
