--- a/src/index.html
+++ b/src/index.html
@@ -563,10 +563,10 @@
           </div>
         </div>
         <div class="row">
-          <p class="footer__copyright col-12 col-lg-4">
+          <p class="footer__copyright col-12 col-md-5">
             &#169; 2012-2020 Preply Inc.
           </p>
-          <div class="footer__privacy col-12 offset-lg-6 col-lg-2">
+          <div class="footer__privacy col-12 offset-md-4 col-md-3">
             <a href="#">Privacy Policy</a>
           </div>
         </div>
