--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             <img src="./images/logo.png" alt="">
           </div>
           <div class="promo__privacy offset-md-7 col-md-3">
-            <a href="#">Privacy Policy</a>
+            <a href="#" class="link">Privacy Policy</a>
           </div>
         </div>
         <div class="row">
@@ -565,7 +565,7 @@
         <div class="row">
           <p class="footer__copyright col-12 col-md-5">
             &#169; 2012-2020 Preply Inc.
-          </p>
+          </p>  
           <div class="footer__privacy col-12 offset-md-4 col-md-3">
             <a href="#">Privacy Policy</a>
           </div>
