--- a/src/index.html
+++ b/src/index.html
@@ -149,7 +149,7 @@
         </div>
       </div>
     </section>
-    <section class="vacancies">
+    <section class="vacancies" id="vacancies">
       <div class="container">
         <div class="row">
           <div class="vacancies__wrapper col-10 offset-1">
