fixed block aligment

--- a/src/index.html
+++ b/src/index.html
@@ -308,7 +308,7 @@
     </section>
     <section class="perks">
       <div class="container">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-center">
           <h3 class="perks__title col-12">Perks and benefits</h3>
           <p
             class="perks__description col-12"
@@ -451,7 +451,7 @@
 
     <section class="in-news">
       <div class="container">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-center">
           <h3 class="in-news__title col-12">Preply in the news</h3>
           <p
             class="in-news__description col-12"
@@ -459,7 +459,7 @@
             Ok, now we're just showing off...
           </p>
 
-          <div class="in-news__wrapper col-12">
+          <div class="in-news__wrapper">
             <div class="in-news__news news news--crunch">
               <div class="news__wrapper">
                 <h4 class="news__quotes">“</h4>
