--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             <a href="#">Privacy Policy</a>
           </div>
         </div>
-        <div class="row">
+        <div class="row scroll-section">
           <div class="promo__content col-12">
             <p class="promo__subtitle">preply careers</p>
             <h1 class="promo__title">Where your ideas create connections</h1>
@@ -57,7 +57,7 @@
       </div>
     </section>
 
-    <section class="language slogan">
+    <section class="language slogan scroll-section">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-7 col-lg-12">
@@ -79,7 +79,7 @@
         </div>
       </div>
     </section>
-    <section class="people-behind">
+    <section class="people-behind scroll-section">
       <div class="container">
         <div class="row justify-content-md-center">
           <h2 class="people-behind__title col-12">The people behind Preply</h2>
@@ -133,7 +133,7 @@
         </div>
       </div>
     </section>
-    <section class="work_with_us slogan slogan--red">
+    <section class="work_with_us slogan slogan--red scroll-section">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
@@ -155,7 +155,7 @@
         </div>
       </div>
     </section>
-    <section class="vacancies" id="vacancies">
+    <section class="vacancies scroll-section" id="vacancies">
       <div class="container">
         <div class="row">
           <div class="vacancies__wrapper col-10 offset-1">
@@ -189,7 +189,7 @@
         </div>
       </div>
     </section>
-    <section class="where-to-find">
+    <section class="where-to-find scroll-section">
       <div class="container">
         <div class="row justify-content-md-center">
           <h2 class="where-to-find__title col-12">Where to find us</h2>
@@ -312,7 +312,7 @@
         </div>
       </div>
     </section>
-    <section class="perks">
+    <section class="perks scroll-section">
       <div class="container">
         <div class="row justify-content-md-center">
           <h3 class="perks__title col-12">Perks and benefits</h3>
@@ -455,7 +455,7 @@
       </div>
     </section>
 
-    <section class="in-news">
+    <section class="in-news scroll-section">
       <div class="container">
         <div class="row justify-content-md-center">
           <h3 class="in-news__title col-12">Preply in the news</h3>
@@ -535,7 +535,7 @@
       </div>
     </section>
 
-    <section class="shape_of_future slogan">
+    <section class="shape_of_future slogan scroll-section">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
