--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <a href="#" class="link">Privacy Policy</a>
           </div>
         </div>
-        <div class="row">
+        <div class="row scroll-section">
           <div class="promo__content col-12">
             <p class="promo__subtitle">preply careers</p>
             <h1 class="promo__title">Where your ideas create connections</h1>
@@ -51,7 +51,7 @@
       </div>
     </section>
 
-    <section class="language slogan">
+    <section class="language slogan scroll-section">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-7 col-lg-12">
@@ -73,7 +73,7 @@
         </div>
       </div>
     </section>
-    <section class="people-behind">
+    <section class="people-behind scroll-section">
       <div class="container">
         <div class="row justify-content-md-center">
           <h2 class="people-behind__title col-12">The people behind Preply</h2>
@@ -127,7 +127,7 @@
         </div>
       </div>
     </section>
-    <section class="work_with_us slogan slogan--red">
+    <section class="work_with_us slogan slogan--red scroll-section">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
@@ -149,7 +149,7 @@
         </div>
       </div>
     </section>
-    <section class="vacancies" id="vacancies">
+    <section class="vacancies scroll-section" id="vacancies">
       <div class="container">
         <div class="row">
           <div class="vacancies__wrapper col-10 offset-1">
@@ -183,7 +183,7 @@
         </div>
       </div>
     </section>
-    <section class="where-to-find">
+    <section class="where-to-find scroll-section">
       <div class="container">
         <div class="row justify-content-md-center">
           <h2 class="where-to-find__title col-12">Where to find us</h2>
@@ -306,7 +306,7 @@
         </div>
       </div>
     </section>
-    <section class="perks">
+    <section class="perks scroll-section">
       <div class="container">
         <div class="row justify-content-center">
           <h3 class="perks__title col-12">Perks and benefits</h3>
@@ -449,7 +449,7 @@
       </div>
     </section>
 
-    <section class="in-news">
+    <section class="in-news scroll-section">
       <div class="container">
         <div class="row justify-content-center">
           <h3 class="in-news__title col-12">Preply in the news</h3>
@@ -529,7 +529,7 @@
       </div>
     </section>
 
-    <section class="shape_of_future slogan">
+    <section class="shape_of_future slogan scroll-section">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
