fixed block aligment (#62)

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
     </section>
     <section class="people-behind scroll-section">
       <div class="container">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-center">
           <h2 class="people-behind__title col-12">The people behind Preply</h2>
 
           <p class="people-behind__description col-lg-8">
@@ -185,7 +185,7 @@
     </section>
     <section class="where-to-find scroll-section">
       <div class="container">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-center">
           <h2 class="where-to-find__title col-12">Where to find us</h2>
 
           <p class="where-to-find__description col-12 col-lg-8">
@@ -193,7 +193,7 @@
           </p>
 
           <div class="where-to-find__gallery gallery">
-            <div class="gallery__controls row justify-content-md-center">
+            <div class="gallery__controls row justify-content-center">
               <div class="gallery__button--wrp col-6 col-lg-4 col-xl-3">
                 <img
                   src="./images/whereToFind/kyiv/0.png"
