fix classes for wrapers (#63)

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,7 @@
         </div>
       </div>
     </section>
+
     <section class="people-behind scroll-section">
       <div class="container">
         <div class="row justify-content-center">
@@ -83,7 +84,7 @@
           </p>
 
           <div class="people-behind__gallery row">
-            <div class="people-behind__img--wrp col-5">
+            <div class="people-behind__img-wrp col-5">
               <img
                 src="./images/peopleBehind/1.png"
                 alt="Proply logo"
@@ -91,7 +92,7 @@
                 class="people-behind__img"
               >
             </div>
-            <div class="people-behind__img--wrp col-12 col-lg-7">
+            <div class="people-behind__img-wrp col-12 col-lg-7">
               <img
                 src="./images/peopleBehind/2.png"
                 alt="Proply team"
@@ -99,7 +100,7 @@
                 class="people-behind__img"
               >
             </div>
-            <div class="people-behind__img--wrp col-8 col-lg-4">
+            <div class="people-behind__img-wrp col-8 col-lg-4">
               <img
                 src="./images/peopleBehind/3.png"
                 alt="Proply team"
@@ -107,7 +108,7 @@
                 class="people-behind__img"
               >
             </div>
-            <div class="people-behind__img--wrp col-7 col-lg-5">
+            <div class="people-behind__img-wrp col-7 col-lg-5">
               <img
                 src="./images/peopleBehind/4.png"
                 alt="Proply team"
@@ -115,7 +116,7 @@
                 class="people-behind__img"
               >
             </div>
-            <div class="people-behind__img--wrp col-4 col-lg-3">
+            <div class="people-behind__img-wrp col-4 col-lg-3">
               <img
                 src="./images/peopleBehind/5.png"
                 alt="Proply team"
@@ -127,6 +128,7 @@
         </div>
       </div>
     </section>
+
     <section class="work_with_us slogan slogan--red scroll-section">
       <div class="container">
         <div class="row slogan__wrapper">
@@ -149,6 +151,7 @@
         </div>
       </div>
     </section>
+
     <section class="vacancies scroll-section" id="vacancies">
       <div class="container">
         <div class="row">
@@ -183,6 +186,7 @@
         </div>
       </div>
     </section>
+
     <section class="where-to-find scroll-section">
       <div class="container">
         <div class="row justify-content-center">
@@ -208,7 +212,7 @@
                 </button>
               </div>
 
-              <div class="gallery__button--wrp col-6 col-lg-4 col-xl-3">
+              <div class="gallery__button-wrp col-6 col-lg-4 col-xl-3">
                 <img
                   src="./images/whereToFind/barcelona/0.png"
                   alt="Barcelona"
@@ -225,7 +229,7 @@
 
             <div class="gallery__photos row justify-content-center">
               <div class="gallery__photo-item gallery__photo--large-height col-12 col-lg-6">
-                <div class="gallery__photo--wrp">
+                <div class="gallery__photo-wrp">
                   <img
                     src="./images/whereToFind/kyiv/1.png"
                     alt="Kyiv"
@@ -244,7 +248,7 @@
 
               <div class="gallery__group col-12 col-lg-6 row">
                 <div class="gallery__photo-item gallery__photo--small-height order-1 order-lg-0 col-12">
-                  <div class="gallery__photo--wrp">
+                  <div class="gallery__photo-wrp">
                     <img
                       src="./images/whereToFind/kyiv/2.png"
                       alt="Kyiv"
@@ -262,7 +266,7 @@
                 </div>
 
                 <div class="gallery__photo-item gallery__photo--small-height col-6">
-                  <div class="gallery__photo--wrp">
+                  <div class="gallery__photo-wrp">
                     <img
                       src="./images/whereToFind/kyiv/3.png"
                       alt="Kyiv"
@@ -280,7 +284,7 @@
                 </div>
 
                 <div class="gallery__photo-item gallery__photo--small-height col-6">
-                  <div class="gallery__photo--wrp">
+                  <div class="gallery__photo-wrp">
                     <img
                       src="./images/whereToFind/kyiv/4.png"
                       alt="Kyiv"
@@ -306,6 +310,7 @@
         </div>
       </div>
     </section>
+
     <section class="perks scroll-section">
       <div class="container">
         <div class="row justify-content-center">
