fix class for firs button-wrp in gallery

--- a/src/index.html
+++ b/src/index.html
@@ -198,7 +198,7 @@
 
           <div class="where-to-find__gallery gallery">
             <div class="gallery__controls row justify-content-center">
-              <div class="gallery__button--wrp col-6 col-lg-4 col-xl-3">
+              <div class="gallery__button-wrp col-6 col-lg-4 col-xl-3">
                 <img
                   src="./images/whereToFind/kyiv/0.png"
                   alt="Kyiv"
