delete scroll class from vacancies block

--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
       </div>
     </section>
 
-    <section class="vacancies scroll-section" id="vacancies">
+    <section class="vacancies" id="vacancies">
       <div class="container">
         <div class="row">
           <div class="vacancies__wrapper col-10 offset-1">
