add scroll class in vacancies block

--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
     </section>
 
     <section class="vacancies" id="vacancies">
-      <div class="container">
+      <div class="container scroll-section">
         <div class="row">
           <div class="vacancies__wrapper col-10 offset-1">
             <div class="js-team js-group select">
