delete scroll class from vacancies block (#67)
* delete scroll class from vacancies block

* add scroll class in vacancies block

--- a/src/index.html
+++ b/src/index.html
@@ -152,8 +152,8 @@
       </div>
     </section>
 
-    <section class="vacancies scroll-section" id="vacancies">
-      <div class="container">
+    <section class="vacancies" id="vacancies">
+      <div class="container scroll-section">
         <div class="row">
           <div class="vacancies__wrapper col-10 offset-1">
             <div class="js-team js-group select">
