add scroll animation for text elemenst

--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,11 @@
             <a href="#" class="link">Privacy Policy</a>
           </div>
         </div>
-        <div class="row scroll-section">
+        <div class="row">
           <div class="promo__content col-12">
-            <p class="promo__subtitle">preply careers</p>
-            <h1 class="promo__title">Where your ideas create connections</h1>
-            <a href="#vacancies" class="btn">Browse open positions</a>
+            <p class="promo__subtitle scroll-section">preply careers</p>
+            <h1 class="promo__title scroll-section scroll-section--small-delay">Where your ideas create connections</h1>
+            <a href="#vacancies" class="btn scroll-section scroll-section--long-delay">Browse open positions</a>
           </div>
         </div>
         <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--big">
@@ -55,11 +55,11 @@
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-7 col-lg-12">
-            <h2 class="slogan__title">
+            <h2 class="slogan__title scroll-section scroll-section--small-delay">
               Language is a powerful magic
             </h2>
 
-            <p class="slogan__description">
+            <p class="slogan__description scroll-section scroll-section--long-delay">
               It helps people develop professionally, brings families closer and much more. We’re creating a digital space for learners and tutors to shape the future of truly effective learning.
             </p>
           </div>
@@ -77,13 +77,15 @@
     <section class="people-behind scroll-section">
       <div class="container">
         <div class="row justify-content-center">
-          <h2 class="people-behind__title col-12">The people behind Preply</h2>
+          <h2 class="people-behind__title col-12">
+            The people behind Preply
+          </h2>
 
-          <p class="people-behind__description col-lg-8">
+          <p class="people-behind__description col-lg-8 scroll-section scroll-section--small-delay">
             Great products can only be built by great people. People that know how to work hard... and play hard too.
           </p>
 
-          <div class="people-behind__gallery row">
+          <div class="people-behind__gallery row scroll-section scroll-section--long-delay">
             <div class="people-behind__img-wrp col-5">
               <img
                 src="./images/peopleBehind/1.png"
@@ -133,11 +135,11 @@
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
-            <h2 class="slogan__title">
+            <h2 class="slogan__title scroll-section scroll-section--small-delay">
               Work with us
             </h2>
 
-            <p class="slogan__description">
+            <p class="slogan__description scroll-section scroll-section--long-delay">
               Together we’ll change the world of online learning. Want to be a Prepler? Find your role.
             </p>
           </div>
@@ -192,11 +194,11 @@
         <div class="row justify-content-center">
           <h2 class="where-to-find__title col-12">Where to find us</h2>
 
-          <p class="where-to-find__description col-12 col-lg-8">
+          <p class="where-to-find__description col-12 col-lg-8 scroll-section scroll-section--small-delay">
             Our main offices are located in two of the most vibrant and forward-thinking cities in Europe–Kyiv and Barcelona.*
           </p>
 
-          <div class="where-to-find__gallery gallery">
+          <div class="where-to-find__gallery gallery scroll-section scroll-section--long-delay">
             <div class="gallery__controls row justify-content-center">
               <div class="gallery__button-wrp col-6 col-lg-4 col-xl-3">
                 <img
@@ -459,12 +461,12 @@
         <div class="row justify-content-center">
           <h2 class="in-news__title col-12">Preply in the news</h2>
           <p
-            class="in-news__description col-12"
+            class="in-news__description col-12 scroll-section scroll-section--small-delay"
           >
             Ok, now we're just showing off...
           </p>
 
-          <div class="in-news__wrapper">
+          <div class="in-news__wrapper scroll-section scroll-section--long-delay">
             <div class="in-news__news news news--crunch">
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
@@ -538,11 +540,16 @@
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
-            <h2 class="slogan__title">
+            <h2 class="slogan__title scroll-section scroll-section--small-delay">
               Shape the future <br> of effective learning
             </h2>
 
-            <a href="#vacancies" class="btn btn--light slogan__btn">Browse open positions</a>
+            <a
+              href="#vacancies"
+              class="btn btn--light slogan__btn scroll-section scroll-section--long-delay"
+            >
+              Browse open positions
+            </a>
           </div>
 
           <img
