fix scroll animation

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="promo__content col-12">
-            <p class="promo__subtitle scroll-section">preply careers</p>
-            <h1 class="promo__title scroll-section scroll-section--small-delay">Where your ideas create connections</h1>
-            <a href="#vacancies" class="btn scroll-section scroll-section--long-delay">Browse open positions</a>
+          <div class="promo__content col-12 js-scroll">
+            <p class="promo__subtitle js-scroll__element scroll">preply careers</p>
+            <h1 class="promo__title js-scroll__element scroll">Where your ideas create connections</h1>
+            <a href="#vacancies" class="btn js-scroll__element scroll">Browse open positions</a>
           </div>
         </div>
         <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--big">
@@ -51,15 +51,15 @@
       </div>
     </section>
 
-    <section class="language slogan scroll-section">
+    <section class="language slogan slogan--green js-scroll">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-7 col-lg-12">
-            <h2 class="slogan__title scroll-section scroll-section--small-delay">
+            <h2 class="slogan__title js-scroll__element scroll">
               Language is a powerful magic
             </h2>
 
-            <p class="slogan__description scroll-section scroll-section--long-delay">
+            <p class="slogan__description js-scroll__element scroll">
               It helps people develop professionally, brings families closer and much more. We’re creating a digital space for learners and tutors to shape the future of truly effective learning.
             </p>
           </div>
@@ -68,30 +68,30 @@
             src="./images/slogan/slogan_1.svg"
             alt="power"
             loading="lazy"
-            class="slogan__img col-xl-5 col-lg-12"
+            class="slogan__img col-xl-5 col-lg-12 js-scroll__element scroll"
           >
         </div>
       </div>
     </section>
 
-    <section class="people-behind scroll-section">
+    <section class="people-behind js-scroll">
       <div class="container">
         <div class="row justify-content-center">
-          <h2 class="people-behind__title col-12">
+          <h2 class="people-behind__title col-12 js-scroll__element scroll">
             The people behind Preply
           </h2>
 
-          <p class="people-behind__description col-lg-8 scroll-section scroll-section--small-delay">
+          <p class="people-behind__description col-lg-8 js-scroll__element scroll">
             Great products can only be built by great people. People that know how to work hard... and play hard too.
           </p>
 
-          <div class="people-behind__gallery row scroll-section scroll-section--long-delay">
+          <div class="people-behind__gallery row">
             <div class="people-behind__img-wrp col-5">
               <img
                 src="./images/peopleBehind/1.png"
                 alt="Proply logo"
                 loading="lazy"
-                class="people-behind__img"
+                class="people-behind__img js-scroll__element scroll"
               >
             </div>
             <div class="people-behind__img-wrp col-12 col-lg-7">
@@ -99,7 +99,7 @@
                 src="./images/peopleBehind/2.png"
                 alt="Proply team"
                 loading="lazy"
-                class="people-behind__img"
+                class="people-behind__img js-scroll__element scroll"
               >
             </div>
             <div class="people-behind__img-wrp col-8 col-lg-4">
@@ -107,7 +107,7 @@
                 src="./images/peopleBehind/3.png"
                 alt="Proply team"
                 loading="lazy"
-                class="people-behind__img"
+                class="people-behind__img js-scroll__element scroll"
               >
             </div>
             <div class="people-behind__img-wrp col-7 col-lg-5">
@@ -115,7 +115,7 @@
                 src="./images/peopleBehind/4.png"
                 alt="Proply team"
                 loading="lazy"
-                class="people-behind__img"
+                class="people-behind__img js-scroll__element scroll"
               >
             </div>
             <div class="people-behind__img-wrp col-4 col-lg-3">
@@ -123,7 +123,7 @@
                 src="./images/peopleBehind/5.png"
                 alt="Proply team"
                 loading="lazy"
-                class="people-behind__img"
+                class="people-behind__img js-scroll__element scroll"
               >
             </div>
           </div>
@@ -131,15 +131,15 @@
       </div>
     </section>
 
-    <section class="work_with_us slogan slogan--red scroll-section">
+    <section class="work_with_us slogan slogan--red js-scroll">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
-            <h2 class="slogan__title scroll-section scroll-section--small-delay">
+            <h2 class="slogan__title js-scroll__element scroll">
               Work with us
             </h2>
 
-            <p class="slogan__description scroll-section scroll-section--long-delay">
+            <p class="slogan__description js-scroll__element scroll">
               Together we’ll change the world of online learning. Want to be a Prepler? Find your role.
             </p>
           </div>
@@ -148,16 +148,16 @@
             src="./images/slogan/slogan_2.svg"
             alt="partnership"
             loading="lazy"
-            class="slogan__img offset-xl-1 col-xl-5 col-lg-12"
+            class="slogan__img offset-xl-1 col-xl-5 col-lg-12 js-scroll__element scroll"
           >
         </div>
       </div>
     </section>
 
     <section class="vacancies" id="vacancies">
-      <div class="container scroll-section">
+      <div class="container js-scroll">
         <div class="row">
-          <div class="vacancies__wrapper col-10 offset-1">
+          <div class="vacancies__wrapper col-10 offset-1 js-scroll__element scroll">
             <div class="js-team js-group select">
               <div class="js-select select__basic-option" tabindex="0"></div>
               <ul class="js-options select__options">
@@ -184,22 +184,22 @@
             </div>
           </div>
 
-          <table class="vacancies__list offset-1 col-10"></table >
+          <table class="vacancies__list offset-1 col-10 js-scroll__element scroll"></table >
         </div>
       </div>
     </section>
 
-    <section class="where-to-find scroll-section">
+    <section class="where-to-find js-scroll">
       <div class="container">
         <div class="row justify-content-center">
-          <h2 class="where-to-find__title col-12">Where to find us</h2>
+          <h2 class="where-to-find__title col-12 js-scroll__element scroll">Where to find us</h2>
 
-          <p class="where-to-find__description col-12 col-lg-8 scroll-section scroll-section--small-delay">
+          <p class="where-to-find__description col-12 col-lg-8 js-scroll__element scroll">
             Our main offices are located in two of the most vibrant and forward-thinking cities in Europe–Kyiv and Barcelona.*
           </p>
 
-          <div class="where-to-find__gallery gallery scroll-section scroll-section--long-delay">
-            <div class="gallery__controls row justify-content-center">
+          <div class="where-to-find__gallery gallery">
+            <div class="gallery__controls row justify-content-center js-scroll__element scroll">
               <div class="gallery__button-wrp col-6 col-lg-4 col-xl-3">
                 <img
                   src="./images/whereToFind/kyiv/0.png"
@@ -231,7 +231,7 @@
 
             <div class="gallery__photos row justify-content-center">
               <div class="gallery__photo-item gallery__photo--large-height col-12 col-lg-6">
-                <div class="gallery__photo-wrp">
+                <div class="gallery__photo-wrp js-scroll__element scroll">
                   <img
                     src="./images/whereToFind/kyiv/1.png"
                     alt="Kyiv"
@@ -250,7 +250,7 @@
 
               <div class="gallery__group col-12 col-lg-6 row">
                 <div class="gallery__photo-item gallery__photo--small-height order-1 order-lg-0 col-12">
-                  <div class="gallery__photo-wrp">
+                  <div class="gallery__photo-wrp js-scroll__element scroll">
                     <img
                       src="./images/whereToFind/kyiv/2.png"
                       alt="Kyiv"
@@ -268,7 +268,7 @@
                 </div>
 
                 <div class="gallery__photo-item gallery__photo--small-height col-6">
-                  <div class="gallery__photo-wrp">
+                  <div class="gallery__photo-wrp js-scroll__element scroll">
                     <img
                       src="./images/whereToFind/kyiv/3.png"
                       alt="Kyiv"
@@ -286,7 +286,7 @@
                 </div>
 
                 <div class="gallery__photo-item gallery__photo--small-height col-6">
-                  <div class="gallery__photo-wrp">
+                  <div class="gallery__photo-wrp js-scroll__element scroll">
                     <img
                       src="./images/whereToFind/kyiv/4.png"
                       alt="Kyiv"
@@ -306,24 +306,24 @@
             </div>
           </div>
 
-          <span class="where-to-find__hint">
+          <span class="where-to-find__hint js-scroll__element scroll">
             *flexible WFH policy applies due to the current state of COVID-19
           </span>
         </div>
       </div>
     </section>
 
-    <section class="perks scroll-section">
+    <section class="perks js-scroll">
       <div class="container">
         <div class="row justify-content-center">
-          <h2 class="perks__title col-12">Perks and benefits</h2>
+          <h2 class="perks__title col-12 js-scroll__element scroll">Perks and benefits</h2>
           <p
-            class="perks__description col-12"
+            class="perks__description col-12 js-scroll__element scroll"
           >
             A few more reasons why you’ll love working with us.
           </p>
 
-          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4 js-scroll__element scroll">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="study"
@@ -344,7 +344,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4 js-scroll__element scroll">
             <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="stock"
@@ -365,7 +365,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4 js-scroll__element scroll">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="insurance"
@@ -387,7 +387,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4 js-scroll__element scroll">
             <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="location"
@@ -409,7 +409,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4 js-scroll__element scroll">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="equipment"
@@ -431,7 +431,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4 js-scroll__element scroll">
             <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="holidays"
@@ -456,17 +456,17 @@
       </div>
     </section>
 
-    <section class="in-news scroll-section">
+    <section class="in-news js-scroll">
       <div class="container">
         <div class="row justify-content-center">
-          <h2 class="in-news__title col-12">Preply in the news</h2>
+          <h2 class="in-news__title col-12 js-scroll__element scroll">Preply in the news</h2>
           <p
-            class="in-news__description col-12 scroll-section scroll-section--small-delay"
+            class="in-news__description col-12 js-scroll__element scroll"
           >
             Ok, now we're just showing off...
           </p>
 
-          <div class="in-news__wrapper scroll-section scroll-section--long-delay">
+          <div class="in-news__wrapper js-scroll__element scroll">
             <div class="in-news__news news news--crunch">
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
@@ -488,7 +488,7 @@
               </div>
             </div>
 
-            <div class="in-news__news news news--forbes">
+            <div class="in-news__news news news--forbes js-scroll__element scroll">
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
                 <div class="news__bottom">
@@ -509,7 +509,7 @@
               </div>
             </div>
 
-            <div class="in-news__news news news--edsurge">
+            <div class="in-news__news news news--edsurge js-scroll__element scroll">
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
                 <div class="news__bottom">
@@ -536,17 +536,17 @@
       </div>
     </section>
 
-    <section class="shape_of_future slogan scroll-section">
+    <section class="shape_of_future slogan slogan--green js-scroll">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
-            <h2 class="slogan__title scroll-section scroll-section--small-delay">
+            <h2 class="slogan__title js-scroll__element scroll">
               Shape the future <br> of effective learning
             </h2>
 
             <a
               href="#vacancies"
-              class="btn btn--light slogan__btn scroll-section scroll-section--long-delay"
+              class="btn btn--light slogan__btn js-scroll__element scroll"
             >
               Browse open positions
             </a>
@@ -556,7 +556,7 @@
             src="./images/slogan/slogan_3.svg"
             alt="learning"
             loading="lazy"
-            class="slogan__img slogan__img--center offset-xl-1 col-xl-5 col-lg-12"
+            class="slogan__img slogan__img--center offset-xl-1 col-xl-5 col-lg-12 js-scroll__element scroll"
           >
         </div>
       </div>
