fix classes and transition time

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,9 @@
           <div class="promo__content col-12 js-scroll">
             <p class="promo__subtitle js-scroll__element scroll">preply careers</p>
             <h1 class="promo__title js-scroll__element scroll">Where your ideas create connections</h1>
-            <a href="#vacancies" class="btn js-scroll__element scroll">Browse open positions</a>
+            <div class="js-scroll__element scroll">
+              <a href="#vacancies" class="btn">Browse open positions</a>
+            </div>
           </div>
         </div>
         <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--big">
@@ -544,12 +546,14 @@
               Shape the future <br> of effective learning
             </h2>
 
-            <a
-              href="#vacancies"
-              class="btn btn--light slogan__btn js-scroll__element scroll"
-            >
-              Browse open positions
-            </a>
+            <div class="js-scroll__element scroll">
+              <a
+                href="#vacancies"
+                class="btn btn--light slogan__btn"
+              >
+                Browse open positions
+              </a>
+            </div>
           </div>
 
           <img
