fix classes and animation for first gallery

--- a/src/index.html
+++ b/src/index.html
@@ -79,54 +79,74 @@
     <section class="people-behind js-scroll">
       <div class="container">
         <div class="row justify-content-center">
-          <h2 class="people-behind__title col-12 js-scroll__element scroll">
-            The people behind Preply
-          </h2>
+          <div class="col-12">
+            <h2 class="people-behind__title js-scroll__element scroll">
+              The people behind Preply
+            </h2>
+          </div>
 
-          <p class="people-behind__description col-lg-8 js-scroll__element scroll">
-            Great products can only be built by great people. People that know how to work hard... and play hard too.
-          </p>
+          <div class="col-lg-8">
+            <p class="people-behind__description js-scroll__element scroll">
+              Great products can only be built by great people. People that know how to work hard... and play hard too.
+            </p>
+          </div>
 
-          <div class="people-behind__gallery row">
-            <div class="people-behind__img-wrp col-5">
-              <img
-                src="./images/peopleBehind/1.png"
-                alt="Proply logo"
-                loading="lazy"
-                class="people-behind__img js-scroll__element scroll"
-              >
-            </div>
-            <div class="people-behind__img-wrp col-12 col-lg-7">
-              <img
-                src="./images/peopleBehind/2.png"
-                alt="Proply team"
-                loading="lazy"
-                class="people-behind__img js-scroll__element scroll"
-              >
-            </div>
-            <div class="people-behind__img-wrp col-8 col-lg-4">
-              <img
-                src="./images/peopleBehind/3.png"
-                alt="Proply team"
-                loading="lazy"
-                class="people-behind__img js-scroll__element scroll"
-              >
-            </div>
-            <div class="people-behind__img-wrp col-7 col-lg-5">
-              <img
-                src="./images/peopleBehind/4.png"
-                alt="Proply team"
-                loading="lazy"
-                class="people-behind__img js-scroll__element scroll"
-              >
-            </div>
-            <div class="people-behind__img-wrp col-4 col-lg-3">
-              <img
-                src="./images/peopleBehind/5.png"
-                alt="Proply team"
-                loading="lazy"
-                class="people-behind__img js-scroll__element scroll"
-              >
+          <div class="people-behind__gallery">
+            <div class="row">
+              <div class="col-5 order-1">
+                <div class="people-behind__img-wrp js-scroll__element scroll">
+                  <img
+                    src="./images/peopleBehind/1.png"
+                    alt="Proply logo"
+                    loading="lazy"
+                    class="people-behind__img"
+                  >
+                </div>
+              </div>
+
+              <div class="col-12 col-lg-7 order-2">
+                <div class="people-behind__img-wrp js-scroll__element scroll">
+                  <img
+                    src="./images/peopleBehind/2.png"
+                    alt="Proply team"
+                    loading="lazy"
+                    class="people-behind__img"
+                  >
+                </div>
+              </div>
+
+              <div class="col-8 col-lg-4 order-3">
+                <div class="people-behind__img-wrp js-scroll__element scroll">
+                  <img
+                    src="./images/peopleBehind/3.png"
+                    alt="Proply team"
+                    loading="lazy"
+                    class="people-behind__img"
+                  >
+                </div>
+              </div>
+
+              <div class="col-7 col-lg-5 order-1 order-lg-4">
+                <div class="people-behind__img-wrp js-scroll__element scroll">
+                  <img
+                    src="./images/peopleBehind/4.png"
+                    alt="Proply team"
+                    loading="lazy"
+                    class="people-behind__img"
+                  >
+                </div>
+              </div>
+
+              <div class="col-4 col-lg-3 order-last">
+                <div class="people-behind__img-wrp js-scroll__element scroll">
+                  <img
+                    src="./images/peopleBehind/5.png"
+                    alt="Proply team"
+                    loading="lazy"
+                    class="people-behind__img"
+                  >
+                </div>
+              </div>
             </div>
           </div>
         </div>
